RM-1368 fixed layout when scripting is disabled RM-1364 reduced flicker to bottom of page
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13633 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/HTML/Standard/SingleView.css
+++ b/Remotion/Web/Core/Res/HTML/Standard/SingleView.css
@@ -3,6 +3,16 @@ div.singleView
   width: 100%;
   height: 100%;
   position: relative;
+  margin: 0;
+	padding: 0;
+}
+
+div.singleView div.content
+{
+  position: relative;
+  margin: 10px;
+  width: auto;
+  height: auto;
 }
 
 div.singleViewView
@@ -10,9 +20,6 @@ div.singleViewView
   padding: 0;
   vertical-align: top; 
 	border: solid 1px #005588;	
-	left: 10px;
-  width: 100%;
-  position: relative;
   overflow: auto;	
 }
 
@@ -40,20 +47,14 @@ html > body div.singleViewView
 div.singleViewTopControls
 {
   padding-bottom: 1em;
-  top: 15px; 
-	left: 10px; 
-	width: 100%; 
 	overflow: hidden;
 }
 
 /* Applied to the bottom section of the multi view. Height cannot be provided in percent. */
 div.singleViewBottomControls
 {
-  position: absolute; 
+  
   padding-top: 1em;
-  bottom: 15px; 
-  left: 10px;
-  width: 100%; 
   overflow: hidden;
 }
 
