--- a/Remotion/Web/Core/Res/HTML/Standard/TabbedMultiView.css
+++ b/Remotion/Web/Core/Res/HTML/Standard/TabbedMultiView.css
@@ -10,28 +10,25 @@ html > body div.tabbedMultiViewActiveView
 
 div.tabbedMultiView
 {
+  margin: 0;
+	padding: 0;
   width: 100%;
   height: 100%;
+}
+
+div.tabbedMultiView div.content
+{
   position: relative;
-	margin: auto;
+  margin: 10px;
+  width: auto;
+  height: auto;
 }
 
 /* Applied to the top section of the multi view. Height cannot be provided in percent. */
 div.tabbedMultiViewTopControls
 {
   padding-bottom: 1em;
-  top: 15px; 
-	left: 10px; 
-	width: 100%; 
 	overflow: hidden;
-
-}
-
-div.tabbedMultiViewTabStrip
-{
-  position: relative;
-  left: 10px;
-  width: 100%;
 }
 
 div.tabbedMultiViewTabStrip div
@@ -43,20 +40,13 @@ div.tabbedMultiViewTabStrip div
 /* Applied to the bottom section of the multi view. Height cannot be provided in percent. */
 div.tabbedMultiViewBottomControls
 {
-  position: absolute; 
   padding-top: 1em;
   overflow: hidden;
-  bottom: 15px; 
-  left: 10px;
-  width: 100%;
 }
-
 
 div.tabbedMultiViewActiveView
 {
-  position: relative;
   overflow: auto;
-  left: 10px;
   border-left: solid 1px #005588;
   border-right: solid 1px #005588;
   border-bottom: solid 1px #005588;
